experiement_output/error_log/nondex-aucguy-OptifineGradle.log
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task994/wd/NonDex-plugin-test/github.com/aucguy/OptifineGradle/src/main/java/com/github/aucguy/optifinegradle/CacheWrapper.java:32: error: cannot find symbol
		task.execute();
		    ^
  symbol:   method execute()
  location: variable task of type AbstractTask
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 12s
